--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,278 +1,325 @@
-.main {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
-  padding: 6rem;
-  min-height: 100vh;
-}
-
-.description {
-  display: inherit;
-  justify-content: inherit;
-  align-items: inherit;
-  font-size: 0.85rem;
-  max-width: var(--max-width);
+/* Header Container */
+.header {
   width: 100%;
-  z-index: 2;
-  font-family: var(--font-mono);
+  background-color: #ffffff;
+  box-shadow: 0px 6px 53px 9px #00000033;
+  text-align: center;
+  /* position: fixed; */
 }
 
-.description a {
+.logo {
+  height: 56px;
+  width: 200px;
+}
+
+/* Home Page */
+.HomeContainer {
+  height: 100vh;
+  background-image: linear-gradient(rgba(95, 95, 95, 0.401), rgba(0, 0, 0, 0.5)), url(../public/homeBackground.png);
+  background-size: cover;
+  -webkit-background-size: cover;
+}
+
+
+.HomeContainer h1 {
+  color: #ffffff;
+  text-shadow: 5px 2px 6px rgb(0 0 0 / 30%);
+  font-size: 59px;
+  padding: 62px 59px;
+}
+
+.homeContent {
+  width: 47%;
+}
+
+.HomeContainer p {
+  padding: 0px 25px;
+  font-size: 15px;
+  color: #ffffff;
+  text-shadow: 1px 1px 3px rgb(0 0 0 / 30%);
+  text-align: justify;
+  margin: -43px 43px;
+  line-height: 20px;
+}
+
+/* Footer */
+
+.FooterContainer {
+  height: 13vh;
+  background-color: black;
+}
+
+.FooterContainer p {
+  color: #FFFFFFA8;
+  font-size: 16px;
+  text-align: center;
+  padding: 12px;
+}
+
+.startLearningBut {
+  background-color: #04AA6D;
+  border: navajowhite;
+  border-radius: 27px;
+  font-size: 30px;
+  color: #FFFFFF;
+  padding: 14px 23px
+}
+
+.startLearningContainer {
+  padding: 59px 56px;
+}
+
+/* Mdules Page */
+
+.homeModulesContainer {
+  background: radial-gradient(79.57% 29.83% at 50% 70.17%, #FFFFFF 0%, #DEFFF3 100%);
+  height: 100vh;
+}
+
+.homeModulesContainer h1 {
+  text-align: center;
+  color: #181619;
+  padding: 15px;
+
+}
+
+.differentModuleHome {
   display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 0.5rem;
+  justify-content: space-around;
 }
 
-.description p {
-  position: relative;
-  margin: 0;
-  padding: 1rem;
-  background-color: rgba(var(--callout-rgb), 0.5);
-  border: 1px solid rgba(var(--callout-border-rgb), 0.3);
-  border-radius: var(--border-radius);
-}
-
-.code {
-  font-weight: 700;
-  font-family: var(--font-mono);
-}
-
-.grid {
-  display: grid;
-  grid-template-columns: repeat(4, minmax(25%, auto));
-  width: var(--max-width);
-  max-width: 100%;
-}
-
-.card {
-  padding: 1rem 1.2rem;
-  border-radius: var(--border-radius);
-  background: rgba(var(--card-rgb), 0);
-  border: 1px solid rgba(var(--card-border-rgb), 0);
-  transition: background 200ms, border 200ms;
-}
-
-.card span {
-  display: inline-block;
-  transition: transform 200ms;
-}
-
-.card h2 {
-  font-weight: 600;
-  margin-bottom: 0.7rem;
-}
-
-.card p {
-  margin: 0;
-  opacity: 0.6;
-  font-size: 0.9rem;
-  line-height: 1.5;
-  max-width: 30ch;
-}
-
-.center {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  position: relative;
-  padding: 4rem 0;
-}
-
-.center::before {
-  background: var(--secondary-glow);
-  border-radius: 50%;
-  width: 480px;
+.ModulesIntro {
+  width: 282px;
   height: 360px;
-  margin-left: -400px;
+  border-radius: 16px;
 }
 
-.center::after {
-  background: var(--primary-glow);
-  width: 240px;
-  height: 180px;
-  z-index: -1;
+.SubModule1Intro {
+  margin: 15px;
+  height: 100%;
+  border: double 4px transparent;
+  border-radius: 16px;
+  background-image: linear-gradient(#FFFFFF 0%, #DFE0E0 100%), radial-gradient(circle at top left, #00C469, #00BFFF);
+  background-origin: border-box;
+  background-clip: padding-box, border-box;
 }
 
-.center::before,
-.center::after {
-  content: '';
-  left: 50%;
-  position: absolute;
-  filter: blur(45px);
-  transform: translateZ(0);
+.SubModule1Intro p {
+  padding: 46px 20px;
+  text-align: justify;
+  font-size: 14px;
+  line-height: 22px;
+  height: 75%;
 }
 
-.logo,
-.thirteen {
-  position: relative;
+.SubModule1IntroLogo {
+  height: 150px;
+  width: 150px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  margin: 0px 44px;
+  border: double 10px transparent;
+  background-image: linear-gradient(#FFFFFF 0%, #DFE0E0 100%), radial-gradient(circle at top left, #04AA6D, #47E3AA);
+  background-origin: border-box;
+  background-clip: padding-box, border-box;
 }
 
-.thirteen {
+.charLogo {
+  margin: 19px 24px;
+}
+
+.getStartedButContainer {
+  text-align: center;
+  margin: 75px;
+}
+
+.getStartedBut {
+  background-color: #04AA6D;
+  border: navajowhite;
+  border-radius: 27px;
+  font-size: 25px;
+  color: #FFFFFF;
+  padding: 14px 23px
+}
+
+
+/* Module 1 Home Page */
+
+.Module1Poster {
+  height: 122vh;
+  background-image: linear-gradient(rgba(95, 95, 95, 0.401), rgba(0, 0, 0, 0.5)), url(../public/Module1Poster.png);
+  background-position: center;
+  background-size: cover;
+  -webkit-background-size: cover;
+
+}
+
+.module1Head h1 {
+  color: #ffffff;
+  text-shadow: 5px 2px 6px rgb(0 0 0 / 30%);
+  font-size: 80px;
+  padding: 115px 100px
+}
+
+.module1Quest {
+  padding: 0px 56px;
+  font-size: 42px;
+  color: #ffffff;
+  text-shadow: 1px 1px 3px rgb(0 0 0 / 30%);
+  text-align: justify;
+  margin: -94px 41px;
+  line-height: 20px;
+}
+
+.Module1Intro {
+  height: 50vh;
+  background: radial-gradient(79.57% 29.83% at 50% 70.17%, #FFFFFF 0%, #DEFFF3 100%);
+}
+
+.Module1Intro p {
+  width: 50%;
+  margin: auto;
+  text-align: justify;
+  font-size: 23px;
+  padding: 18px;
+}
+
+.startLearningModule1But {
+  background-color: #04AA6D;
+  border: none;
+  border-radius: 15px;
+  font-size: 25px;
+  color: #FFFFFF;
+  margin: 23px;
+  padding: 12px 15px;
+}
+
+.StartLearningModul1ButContainer {
+  text-align: center;
+}
+
+/* Job Description */
+
+.jobDescriptionContainer {
+  background-image: url(../public/chapterBg.png);
+  background-color: #D9FFF1;
+  height: 135vh;
+
+}
+
+.jobDescriptionSectionsContainer {
   display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 75px;
-  height: 75px;
-  padding: 25px 10px;
-  margin-left: 16px;
-  transform: translateZ(0);
-  border-radius: var(--border-radius);
-  overflow: hidden;
-  box-shadow: 0px 2px 8px -1px #0000001a;
+  justify-content: space-around;
+  padding: 51px 9px;
 }
 
-.thirteen::before,
-.thirteen::after {
-  content: '';
+.jobDescriptionSections {
+  width: 250px;
+}
+
+.jobDescriptionSectionImg {
+  margin: 35px;
+}
+
+.jobDescriptionSections h3 {
+  font-size: 23px;
+  line-height: 35px;
+}
+
+.jobDescriptionContainer h1 {
+  text-align: center;
+}
+
+.jobDescriptionSectionsContent {
+  text-align: center;
+  text-align: justify;
+}
+
+.flipcard {
+  background-color: transparent;
+  width: 250px;
+  height: 250px;
+  perspective: 1000px;
+}
+
+.flipcardinner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  transition: transform 500ms;
+  transform-style: preserve-3d;
+  box-shadow: 0 4px 8px 0 rgb(0 0 0 / 20%);
+  background-color: #FFFFFF;
+}
+
+.flipcard:hover .flipcardinner {
+  transform: rotateY(-180deg);
+}
+
+.flipcardfront,
+.flipcardback {
   position: absolute;
-  z-index: -1;
+  width: 100%;
+  height: 100%;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
 }
 
-/* Conic Gradient Animation */
-.thirteen::before {
-  animation: 6s rotate linear infinite;
-  width: 200%;
-  height: 200%;
-  background: var(--tile-border);
+.flipcardback {
+  background-color: #22D794;
+  color: white;
+  transform: rotateY(180deg);
 }
 
-/* Inner Square */
-.thirteen::after {
-  inset: 0;
-  padding: 1px;
-  border-radius: var(--border-radius);
-  background: linear-gradient(
-    to bottom right,
-    rgba(var(--tile-start-rgb), 1),
-    rgba(var(--tile-end-rgb), 1)
-  );
-  background-clip: content-box;
+.flipcardbackContent {
+  padding: 24px;
+  text-align: justify;
 }
 
-/* Enable hover only on non-touch devices */
-@media (hover: hover) and (pointer: fine) {
-  .card:hover {
-    background: rgba(var(--card-rgb), 0.1);
-    border: 1px solid rgba(var(--card-border-rgb), 0.15);
-  }
-
-  .card:hover span {
-    transform: translateX(4px);
-  }
+.jobDisNextButContainer {
+  text-align: center;
 }
 
-@media (prefers-reduced-motion) {
-  .thirteen::before {
-    animation: none;
-  }
+.jobDisNextBut {
+  padding: 4px 29px;
+  background-color: #0FC381;
+  border: none;
+  color: #FFFFFF;
+  font-size: 25px;
+  box-shadow: 0px 0px 15px 0px #0000004D;
+  border-radius: 10px;
 
-  .card:hover span {
-    transform: none;
-  }
 }
 
-/* Mobile */
-@media (max-width: 700px) {
-  .content {
-    padding: 4rem;
-  }
-
-  .grid {
-    grid-template-columns: 1fr;
-    margin-bottom: 120px;
-    max-width: 320px;
-    text-align: center;
-  }
-
-  .card {
-    padding: 1rem 2.5rem;
-  }
-
-  .card h2 {
-    margin-bottom: 0.5rem;
-  }
-
-  .center {
-    padding: 8rem 0 6rem;
-  }
-
-  .center::before {
-    transform: none;
-    height: 300px;
-  }
-
-  .description {
-    font-size: 0.8rem;
-  }
-
-  .description a {
-    padding: 1rem;
-  }
-
-  .description p,
-  .description div {
-    display: flex;
-    justify-content: center;
-    position: fixed;
-    width: 100%;
-  }
-
-  .description p {
-    align-items: center;
-    inset: 0 0 auto;
-    padding: 2rem 1rem 1.4rem;
-    border-radius: 0;
-    border: none;
-    border-bottom: 1px solid rgba(var(--callout-border-rgb), 0.25);
-    background: linear-gradient(
-      to bottom,
-      rgba(var(--background-start-rgb), 1),
-      rgba(var(--callout-rgb), 0.5)
-    );
-    background-clip: padding-box;
-    backdrop-filter: blur(24px);
-  }
-
-  .description div {
-    align-items: flex-end;
-    pointer-events: none;
-    inset: auto 0 0;
-    padding: 2rem;
-    height: 200px;
-    background: linear-gradient(
-      to bottom,
-      transparent 0%,
-      rgb(var(--background-end-rgb)) 40%
-    );
-    z-index: 1;
-  }
+/* Job-Description-video-container */
+.jobDescriptionVideoContainer {
+  background-color: #D9FFF1;
+  height: 100vh;
 }
 
-/* Tablet and Smaller Desktop */
-@media (min-width: 701px) and (max-width: 1120px) {
-  .grid {
-    grid-template-columns: repeat(2, 50%);
-  }
+.jobDescriptionVideoContainer h1 {
+  text-align: center;
+  padding: 20px;
 }
 
-@media (prefers-color-scheme: dark) {
-  .vercelLogo {
-    filter: invert(1);
-  }
-
-  .logo,
-  .thirteen img {
-    filter: invert(1) drop-shadow(0 0 0.3rem #ffffff70);
-  }
+.videoContainer {
+  text-align: center;
+  margin: 31px;
 }
 
-@keyframes rotate {
-  from {
-    transform: rotate(360deg);
-  }
-  to {
-    transform: rotate(0deg);
-  }
+.NextChapterButContainer {
+  text-align: center;
+
+}
+
+.NextChapterBut {
+  background: #0FC381;
+  padding: 10px;
+  border: none;
+  color: #FFFFFF;
+  border-radius: 10px;
+  font-size: 20px;
+  box-shadow: 0px 0px 15px 0px #0000004D;
 }
